--- a/styles/NguyenDucVu_241230896/header_and_footer.css
+++ b/styles/NguyenDucVu_241230896/header_and_footer.css
@@ -71,10 +71,11 @@ header {
 
 #small-searchterms {
     padding-left: 20px;
-    width: 100%;
+    width: 90%;
     min-height: 40px;
     border-radius: 10px;
     margin-left: 20px;
+    border: 1px solid var(--navbarbg);
 }
 
 /* --- Login Dropdown --- */
