--- a/styles/NguyenDucVu_241230896/carousel_banner.css
+++ b/styles/NguyenDucVu_241230896/carousel_banner.css
@@ -1,9 +1,15 @@
 .carousel-container {
+    margin: 50px 0;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f3f4f6;
+    box-shadow: 5px 5px 10px 5px rgba(80, 79, 79, 0.5);
+    border-radius: 10px;
+}
+.carousel-container:hover{
+    transform: scale(1.04);
+    transition: 0.5s;
 }
 .carousel-wrapper {
     position: relative;
@@ -11,6 +17,7 @@
     background: white;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .carousel {
@@ -18,6 +25,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 .slides {
@@ -35,6 +43,7 @@
     aspect-ratio: 100 / 31.25; /* giữ tỉ lệ 100:31.2 */
     object-fit: contain;
     display: block;
+
 }
 
 .ctrl-btn {
@@ -92,6 +101,22 @@
     
 }
 @media screen and (max-width: 890px) {
+    .carousel-container{
+        margin: 0;
+        border-radius: 0;
+    }
+    .carousel-container:hover{
+        transform: none;
+    }
+    .carousel-wrapper{
+        border-radius: 0;
+    }
+    .carousel{
+        border-radius: 0;
+    }
+    .slides{
+        border-radius: 0;
+    }
     .ctrl-btn {
         display: none;
     }
