feature: login, register and change some js function in header and footer

--- a/styles/NguyenDucVu_241230896/header_and_footer.css
+++ b/styles/NguyenDucVu_241230896/header_and_footer.css
@@ -296,7 +296,9 @@ footer {
     header {
         padding: 10px 0;
     }
-
+    .cart-icon{
+        display: none;
+    }
     .header-navbar-for-desktop {
         display: none;
     }
