--- a/styles/NguyenKimTuyen_241230888/product.css
+++ b/styles/NguyenKimTuyen_241230888/product.css
@@ -6,12 +6,12 @@ main {
   width: 100%;
 }
 /* list watch */
-.list-watch {
+.list-product {
   margin-bottom: 40px;
   margin-top: 0;
   width: 100%;
 }
-.list-watch ul {
+.list-product ul {
   width: 100%;
   height: auto;
   display: flex;
@@ -24,25 +24,25 @@ main {
   min-height: 60px;
 }
 
-.list-watch ul::-webkit-scrollbar {
+.list-product ul::-webkit-scrollbar {
   height: 8px;
 }
-.list-watch ul::-webkit-scrollbar-thumb {
+.list-product ul::-webkit-scrollbar-thumb {
   background-color: #ccc;
   border-radius: 4px;
 }
 
-.list-watch ul li {
+.list-product ul li {
   list-style-type: none;
   /* min-width: 200px; */
   transition: all 0.4s ease;
 }
 
-.list-watch ul li:hover {
+.list-product ul li:hover {
   transform: scale(1.1) translateZ(0);
 }
 
-.list-watch ul li a {
+.list-product ul li a {
   padding: 15px;
   border-radius: 15px;
   background-color: #ffffff;
@@ -247,7 +247,7 @@ hr {
 /* End section-2 */
 
 @media (max-width: 1000px) {
-  .list-watch {
+  .list-product {
     width: 98%;
     margin-top: 20px;
     overflow: auto;
@@ -255,7 +255,7 @@ hr {
     margin-right: auto;
   }
 
-  .list-watch ul {
+  .list-product ul {
     margin-top: 8px;
     padding-top: 27px;
     justify-content: flex-start; /* Không nên dùng center ở đây */
@@ -263,7 +263,7 @@ hr {
     min-height: 50px;
   }
 
-  .list-watch ul li {
+  .list-product ul li {
     margin-bottom: 15px;
   }
   .section-1 {
@@ -306,7 +306,7 @@ hr {
 }
 
 @media (max-width: 767px) {
-  .list-watch ul li a {
+  .list-product ul li a {
     font-size: 15px;
   }
   .section-1 {
