--- a/styles/NguyenDucVu_241230896/header_and_footer.css
+++ b/styles/NguyenDucVu_241230896/header_and_footer.css
@@ -27,7 +27,7 @@ a {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(250, 239, 241);
+    background-color: #f5f5f9;
 }
 
 .wrapper-page-content {
