--- a/styles/NguyenDucVu_241230896/iphone.css
+++ b/styles/NguyenDucVu_241230896/iphone.css
@@ -23,6 +23,9 @@
     justify-content: center;
     align-items: center;
 }
+.product-box:hover{
+    box-shadow: 5px 2px 10px rgb(133, 132, 132);
+}
 .product-image{
     width: 60%;
     max-width: 100%;
@@ -58,4 +61,35 @@
 .old-price{
     color: gray;
     text-decoration: line-through;
+}
+
+.section-2{
+    width: 100%;
+    background-color: white;
+    padding: 30px 100px;
+    margin-bottom: 40px;
+    border-radius: 10px;
+}
+
+.section-2 h2{
+    text-align: center;
+    margin: 40px 20px 20px 20px;
+    font-size: 30px;
+}
+
+.section-2 p{
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+.section-2 ul{
+    padding-left: 40px;
+    font-size: 18px;
+
+}
+.section-2 ul li{
+    margin: 10px;
+}
+
+.section-2 b{
+    color: #0553a1;
 }
